# energy_manager

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  copy_and_modify_imports.py  pyproject.toml
.dvc/: config
.github/workflows/: buildings.yml  docs.yml  expenses.yml  pkgs_distros.yml  utils.yml  weather.yml
docs/: Makefile  conf.py  example.html  example.ipynb  make.bat
src/: main.py
src/apis/: get_coordinates.py  get_daily_weather.py  get_hourly_weather.py
src/apis/buildings/: get_buildings_consumptions.py  get_buildings_dpe.py  get_department.py
src/apis/weather/: get_coordinates.py  get_daily_weather.py  get_hourly_weather.py
src/energy_manager/expenses/: compute_daily_expenses.py
src/expenses/: compute_daily_expenses.py
src/scrappers/: __init__.py
src/utils/: generate_daily_timestamps.py  get_dpe_mappings.py  set_dpe_mappings.py  set_edf_prices.py  set_hchp_hours.py  set_season.py
src_copy/energy_manager/classes/: energy_manager.py
src_copy/energy_manager/expenses/: compute_daily_expenses.py
tests/: conftest.py
tests/apis/: test_get_coordinates.py  test_get_daily_weather.py
tests/apis/buildings/: test_get_buildings_consumptions.py  test_get_buildings_dpe.py  test_get_department.py
tests/apis/fixtures/: daily_weather.csv
tests/expenses/: test_compute_daily_expenses.py
tests/scrappers/: test_weather.py
tests/utils/: test_generate_daily_timestamps.py  test_get_dpe_mappings.py  test_get_midnight_utc.py  test_set_dpe_mappings.py  test_set_edf_prices.py  test_set_hchp_hours.py  test_set_season.py
(+15 files in other folders)
