[tool.poetry]
name = "energy_manager"
version = "0.1.0"
description = "A tool to optimize your house energy consumption!"
authors = ["Prince Foli Acouetey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
